--- a/index.html
+++ b/index.html
@@ -776,8 +776,9 @@
 
     <!-- loader -->
     <div id="loader"
-        class="fixed inset-0 bg-white flex items-center justify-center z-[9999999] transition-opacity duration-1000 opacity-100">
+        class="fixed inset-0 bg-white flex flex-col items-center justify-center z-[9999999] transition-opacity duration-1000 opacity-100">
         <img id="logo-img" src="/MIW_Website_Assets/loader_horse.gif" alt="loader" class="w-20 h-20 object-contain">
+        <span id="loading-text" class="text-xl mt-4 ml-5">0%</span>
     </div>
     <!--loader end  -->
     <div class="fixed top-10 right-7 flex flex-col z-[50] place-items-center hidden" id="close-popup-button-wrapper">
@@ -914,11 +915,36 @@
             }
         });
 
-        document.addEventListener("readystatechange", () => {
-            if (document.readyState === "complete") {
+        const loadingText = document.getElementById("loading-text");
+
+        let progress = 0;
+
+        const observer = new PerformanceObserver((list) => {
+            const entries = list.getEntries();
+            const loadedResources = entries.filter(entry => entry.entryType === "resource").length;
+            const totalResources = entries.length;
+
+            progress = Math.floor((loadedResources / totalResources) * 100);
+            loadingText.textContent = `${progress}%`;
+
+            if (progress >= 100) {
                 document.getElementById("loader").classList.add("hidden");
             }
         });
+
+        observer.observe({ type: "resource", buffered: true });
+
+        window.addEventListener("load", () => {
+            progress = 100;
+            loadingText.textContent = "100%";
+            document.getElementById("loader").classList.add("hidden");
+        });
+
+        // document.addEventListener("readystatechange", () => {
+        //     if (document.readyState === "complete") {
+        //         document.getElementById("loader").classList.add("hidden");
+        //     }
+        // });
     </script>
     <script>
         function goToWorkPage() {
