--- a/work.html
+++ b/work.html
@@ -29,6 +29,11 @@
             color: #22c55e;
         }
 
+        .loader-text {
+            color: #ea4294;
+            font-family: 'Lato', sans-serif;
+        }
+
         .footer {
             position: relative;
         }
@@ -296,7 +301,7 @@
     <div id="loader"
         class="fixed inset-0 bg-white flex flex-col items-center justify-center z-[9999999] transition-opacity duration-1000 opacity-100">
         <img id="logo-img" src="/MIW_Website_Assets/loader_horse.gif" alt="loader" class="w-20 h-20 object-contain">
-        <span id="loading-text" class="text-xl mt-4 ml-5">0%</span>
+        <span id="loading-text" class="loader-text text-sm font-bold mt-4 ml-5">0%</span>
     </div>
     <!--loader end  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
@@ -347,7 +352,7 @@
             function incrementLoaded() {
                 loadedCount++;
                 const percent = Math.round((loadedCount / totalAssets) * 100);
-                loadingText.textContent = `Loading ${percent}%`;
+                loadingText.textContent = `${percent}%`;
 
                 if (loadedCount === totalAssets) {
                     finishLoading();
